--- a/static/index.html
+++ b/static/index.html
@@ -6,19 +6,20 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Friend of Tokyo</title>
+    <title>Mineral</title>
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" media="all" href="stylesheets/support/normalize.css">
     <link rel="stylesheet" media="all" href="stylesheets/mineral.css">
   </head>
   <body>
     <div id="Mineral">
-      <header>
-        <h1>Mineral</h1>
-      </header>
+
       <section id="Map">
 
       </section>
+      <footer>
+        <h1>Mineral</h1>
+      </footer>
     </div>
     <script type="text/javascript" data-main="javascripts/mineral" src="javascripts/support/require.js" defer></script>
   </body>
