Man this thing is rickity..

--- a/static/index.html
+++ b/static/index.html
@@ -9,14 +9,13 @@
     <title>Mineral</title>
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" media="all" href="stylesheets/support/normalize.css">
+    <link rel="stylesheet" media="all" href="stylesheets/support/fontello.css">
     <link rel="stylesheet" media="all" href="stylesheets/mineral.css">
   </head>
   <body>
     <div id="Mineral">
-
-      <section id="Map">
-
-      </section>
+      <section id="Players"></section>
+      <section id="Chat"></section>
       <footer>
         <h1>Mineral</h1>
       </footer>
@@ -24,4 +23,3 @@
     <script type="text/javascript" data-main="javascripts/mineral" src="javascripts/support/require.js" defer></script>
   </body>
 </html>
-
